[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.black]
line-length = 79
target-version = ['py37']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
# Use single-quoted strings so TOML treats the string like a Python r-string
# Multi-line strings are implicitly treated by black as regular expressions

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
known_first_party = "lander"
known_third_party = ["base32_lib", "bleach", "bs4", "git", "jinja2", "panflute", "pkg_resources", "pydantic", "pypandoc", "pytest", "setuptools", "typer", "yaml"]
skip = ["docs/conf.py"]

[tool.coverage.run]
parallel = true
branch = true
source = ["lander"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]
