[metadata]
name = lander
description = HTML landing page generator for LSST PDF documentation deployed from Git to LSST the Docs.
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
url = 'https://github.com/lsst-sqre/lander'
project_urls =
    Change log = https://github.com/lsst-sqre/lander/blob/master/CHANGELOG.rst
    Source code = https://github.com/lsst-sqre/lander
    Issue tracker = https://github.com/lsst-sqre/lander/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    importlib_metadata; python_version < "3.8"
    python-dateutil>=2.6.0
    Jinja2>=2.10.1
    structlog
    ltd-conveyor>=0.3.1
    requests
    lsst-projectmeta-kit>=0.3.5

[options.packages.find]
where = src

[options.package_data]
lander =
    assets/*.svg
    assets/*.css
    assets/*.js
    templates/*

[options.entry_points]
console_scripts =
    lander = lander.main:main

[options.extras_require]
dev =
    pytest==5.4.1
    pytest-cov==2.8.1
    pytest-flake8==1.0.6

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP 8
# W503: line break after binary operator, flake8 disagrees with PEP 8
ignore = E203, W503

[tool:pytest]
norecursedirs = node_modules
